--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.10",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
